--- a/org.archicontribs.modelrepository/src/org/archicontribs/modelrepository/dialogs/messages.properties
+++ b/org.archicontribs.modelrepository/src/org/archicontribs/modelrepository/dialogs/messages.properties
@@ -11,6 +11,8 @@ CloneInputDialog_1=Please enter the URL of the remote model and user credentials
 CloneInputDialog_2=URL:
 CloneInputDialog_3=User Name:
 CloneInputDialog_4=Password:
+CloneInputDialog_5=Commit Hash (optional):
+CloneInputDialog_6=Clone Depth (optional):
 CommitDialog_0=Commit
 CommitDialog_1=Please enter user details and a commit message
 CommitDialog_2=User Name:
